views/style.styl
link-color = #36c
text-color = #333
bg-color = #F5F6F7

transition()
    -webkit-transition arguments
    -moz-transition arguments
    -o-transition arguments
    transition arguments

@font-face
    font-family 'didot'
    src url('css/fonts/didot.eot')
    src local('☺'), url('css/fonts/didot.woff') format('woff'), url('css/fonts/didot.ttf') format('truetype'), url('css/fonts/didot.svg') format('svg')
    font-weight normal
    font-style normal

/* For modern browsers */
.clearfix:before, .clearfix:after
    content ""
    display table

.clearfix:after
    clear both


/* For IE 6/7 (trigger hasLayout) */
.clearfix
    zoom 1

.left
    float left

.right
    float right

html, body
    width 100%
    height 100%
    background bg-color url('images/bg.jpg') repeat-x

body
    font-family skolar, "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif
    a
        text-decoration none
        color link-color
    
        *
            color text-color
    
    h1, h2, h3, h4, h5, h6
        font-family skolar, Georgia,"Century Schoolbook","Times New Roman",Times,serif
            

    
    #shell
        margin 0px auto
        width 972px
    
    header, section, footer
        width 972px


    header
        position relative
        
    #header-overlay
        position absolute
        z-index 0
        left 50px
        top 0px

    #header-top
        height 96px
        //background-color #003564
        //box-shadow 0 1px 3px rgba(0,0,0,.4);
        //border-bottom 2px solid white
        border-bottom-right-radius 5px
        border-bottom-left-radius 5px
        h1
            position relative
            z-index 2
            margin-top 55px
            font-weight bold
            float left
            a
                color #111
                font-family didot
                font-size 2.3em
                font-weight normal
                letter-spacing -1px
                padding-left 0px
                text-shadow: 0px 1px 1px white
                -webkit-transition text-shadow .2s linear
                -moz-transition text-shadow .2s linear
                transition(color, .25s, linear)
            a:hover
                color #999
    #header-bottom
        nav
            position relative
            z-index 2
            clear both
            width 636px
            h2
                float left

                a
                    letter-spacing 1px
                    text-shadow 0px 1px 0px white
                    //border-bottom 1px solid transparent
                    font-size 0.8em
                    text-transform uppercase
                    color #333
                    display block
                    padding-left 15px
                    padding-right 11px
                    //padding-bottom 1px
                    transition(color, .25s, linear)
                a:hover, .active
                    color #999

            h2.first a
                padding-left 3px
            
            h2.last
            
            a
                color #333
    section
        margin-top 16px

.container
    margin-bottom 20px

.clear-both
    clear both

.full-banner, .full-banner .container
    width 474px

.full-banner .content-container
    width 468px
    height 60px

.medium-rectangle .content-container
    width 300px
    height 250px

span.timestamp
    color #003366
    font-size .5em
    display block

#search-box
    position absolute
    top 96px
    right 0px
    input
        background #fff url('/images/search-button.png') no-repeat
        border-radius 10px
        border 2px inset
        width 140px
        font-size 14px

.leaderboard
    float right
    margin-top 3px
    padding-left 3px
    margin-bottom 3px
    //border-left 1px solid #ddd


    img
        border-radius 5px
        display block
        -webkit-box-shadow 0px 0px 3px #CCC
        opacity 0.8
        transition opacity 0.25s linear

    a:hover img
        opacity 1
header
    .content
        width 240px
        float left
        position relative
        z-index 2
        
        .announcements
            display none
            color #666
            text-shadow 0 1px 0 white
            h4
                text-align left
                margin-bottom 3px
                font-size 0.7em
                text-transform uppercase
                letter-spacing 1px
                padding-top 4px
            p
                font-size 0.7em
    #header-bottom
        .social-media
            position absolute
            top 99px
            right 151px
            .inner
                .icons
                    text-align left
                    img
                        opacity .5
                        padding-right 7px
                        width 19px
                        height 19px
                        transition opacity, .25s linear
                    a:hover img
                        opacity 1

                    img.last
                        padding-right 0px


footer
    clear both
    color #888
    font-variant small-caps
    text-shadow 0px 1px 1px white
    font-size 0.85em
    padding-bottom 1.5em
    p.copyright
        display inline
        margin-right 20px
    span.links
        a:hover
            text-decoration underline

